# tape_tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  pi-tui-rust-architecture.md
crates/agent_provider/: Cargo.toml
crates/agent_provider/src/: lib.rs
crates/agent_provider_codex_api/: Cargo.toml
crates/agent_provider_codex_api/src/: lib.rs
crates/agent_provider_mock/: Cargo.toml
crates/agent_provider_mock/src/: lib.rs
crates/apply_patch_engine/: Cargo.toml  NOTICE  UPSTREAM.md
crates/apply_patch_engine/src/: invocation.rs  lib.rs  main.rs
crates/apply_patch_engine/tests/: engine.rs
crates/codex_api/: Cargo.toml  README.md
crates/codex_api/src/: client.rs  config.rs  error.rs  events.rs  headers.rs  lib.rs  payload.rs  retry.rs  sse.rs  url.rs
crates/codex_api/tests/: error.rs  events.rs  foundation.rs  header.rs  http.rs  integration.rs  payload.rs  retry.rs  sse.rs  stream.rs  url.rs
crates/coding_agent/: AGENTS.md  Cargo.toml
crates/coding_agent/src/: app.rs  commands.rs  lib.rs  main.rs  model.rs  provider.rs  runtime.rs  tools.rs  tui.rs
crates/coding_agent/src/providers/: mock.rs  mod.rs
crates/coding_agent/tests/: app_flow.rs  cancel.rs  inline.rs  provider_contract.rs  stale_run.rs  teardown.rs  tools.rs
crates/coding_agent/tests/support/: mod.rs
crates/session_store/: Cargo.toml
crates/session_store/src/: error.rs  lib.rs  paths.rs  replay.rs  schema.rs  store.rs
crates/session_store/tests/: session_store.rs
docs/: ARCHITECTURE.md  COMPARISON.md  EXTENSION_CAPABILITY_MATRIX.md
examples/: ansi-forensics.rs  chat-simple.rs  interactive-shell.rs  markdown-playground.rs  markdown_highlight_bench.rs
src/: config.rs  lib.rs  logging.rs
src/core/: autocomplete.rs  component.rs  cursor.rs  editor_component.rs  fuzzy.rs  input.rs  input_event.rs  keybindings.rs  mod.rs  output.rs  terminal.rs  terminal_image.rs
src/core/text/: ansi.rs  mod.rs  slice.rs  utils.rs  width.rs
src/platform/: mod.rs  process_terminal.rs  stdin_buffer.rs
src/render/: ansi.rs  frame.rs  mod.rs  overlay.rs  renderer.rs  slice.rs  surface.rs  utils.rs  width.rs
src/runtime/: component_registry.rs  focus.rs  ime.rs  inline_viewport.rs  mod.rs  overlay.rs  surface.rs  tui.rs
src/widgets/: box.rs  cancellable_loader.rs  container.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
tests/: RUNTIME_VALIDATION_MATRIX.md  cursor_overlay_golden.rs  cursor_surface_golden.rs  fixture.rs  key_golden.rs  layering_widgets.rs  legacy_surface_guard.rs  markdown_golden.rs  public_api.rs  renderer_golden.rs  runtime_deterministic_soak.rs  surface_two_pass_baseline.rs  surface_two_pass_stress.rs  surface_z_order_baseline.rs
tests/fixtures/: cursor_output.txt  key_vectors.tsv  markdown_blockquote_wrap.md  markdown_blockquote_wrap.txt  markdown_links.md  markdown_links.txt  markdown_spacing_rules.md  markdown_spacing_rules.txt  markdown_table_narrow.md  markdown_table_narrow.txt  overlay_composite_anchor.txt  renderer_clear_on_shrink.txt  renderer_diff_one_line.txt  renderer_first_render.txt  renderer_image_line.txt  renderer_width_change_clear.txt  surface_mixed_ansi_osc.txt
