[package]
name = "pi_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
emojis = "0.8.0"
libc = "0.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
signal-hook = "0.4"
markdown = "1.0.0"

[features]
default = []
# Explicit opt-in escape hatch for extensions that must perform raw terminal I/O.
# See `src/runtime/tui.rs` for the contract and self-healing resync behavior.
unsafe-terminal-access = []
