[package]
name = "tape_tui"
version = "0.1.0"
edition = "2021"
description = "Deterministic inline TUI for transcript-style coding agents, chats, and REPLs with built-in markdown syntax highlighting and predictable behavior under input, resize, layering, and teardown pressure."
license = "MIT"
repository = "https://github.com/Gurpartap/tape_tui"
homepage = "https://github.com/Gurpartap/tape_tui"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["tui", "terminal", "ui", "agents", "deterministic"]

[workspace]
members = [
  ".",
  "crates/agent_provider",
  "crates/agent_provider_codex_api",
  "crates/agent_provider_mock",
  "crates/apply_patch_engine",
  "crates/coding_agent",
  "crates/codex_api",
  "crates/session_store",
]
resolver = "2"

[dependencies]
emojis = "0.8.0"
libc = "0.2"
markdown = "1.0.0"
once_cell = "1"
signal-hook = "0.4"
syntect = "5"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[features]
default = []
# Explicit opt-in escape hatch for extensions that must perform raw terminal I/O.
# See `src/runtime/tui.rs` for the contract and self-healing resync behavior.
unsafe-terminal-access = []
