[package]
name = "coding_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_provider = { path = "../agent_provider" }
agent_provider_codex_api = { path = "../agent_provider_codex_api" }
agent_provider_mock = { path = "../agent_provider_mock" }
apply_patch_engine = { path = "../apply_patch_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tape_tui = { path = "../.." }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
