[package]
name = "session_store"
version = "0.1.0"
edition = "2021"

[lib]
name = "session_store"
path = "src/lib.rs"

[dependencies]
agent_provider = { path = "../agent_provider" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
time = { version = "0.3", features = ["formatting", "parsing", "std"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
